# sjs

./: .editorconfig  .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
docs/: Makefile
docs/source/: conf.py  design.rst  faq.rst  features.rst  index.rst  module_system.rst  modules.rst  usage.rst  vmapi.rst
docs/source/.static/: sjs.xcf
docs/source/modules/: assert.rst  codecs.rst  console.rst  errno.rst  fs.rst  hash.rst  io.rst  log.rst  net.rst  objectutil.rst  os.rst  path.rst  process.rst  pwd.rst  random.rst  system.rst  time.rst  utils.rst  uuid.rst
examples/: hello.js
include/sjs/: build.h.in  duk_config.h  duktape.h  sjs.h  version.h  version.h.in  vm.h
modules/: _errno.c  _es6.js  _fs.c  _gai.c  _io.c  _io_poll.js  _io_select.js  _os.c  _path.c  _poll.c  _pwd.c  _select.c  _socket.c  _time.c  _utils_unicode.js  assert.js  base64.js  codecs.js  console.js  errno.cmake  errno.js  fs.cmake  fs.js  hash.js  io.cmake  io.js  log.js  modules.cmake  net.cmake  net.js  objectutil.js  os.cmake  os.js  path.cmake  path.js  process.js  pwd.js  random.js  system.js  time.c  (+4 more)
modules/_hash/: hash.c  sha1.h
modules/_random/: mt19937ar.c  mt19937ar.h  random.c
modules/codecs/: index.js
modules/io/: index.js  poll.js  select.js
modules/utils/: _unorm.js  object.js  unicode.js
src/: binding.c  binding.h  bootstrap.h  bootstrap.js  builtins.c  duk_module_node.c  duk_module_node.h  duktape.c  embedjs.h  es6shim.h  es6shim.js  internal.h  main.c  modules.c  platform-inl.h  polyfill.h  system.c  util.c  version.c  vm.c
src/bindings/: errno.c  gai.c  io.c  os.c  path.c  poll.c  pwd.c  select.c  socket.c
src/bindings/hash/: hash.c  includes.h  md5.h  sha1.c  sha2.c  sha2.h
src/bindings/random/: mt19937ar.c  mt19937ar.h  random.c  test.c
src/cli/: cli.c  greet.h  greet.js  linenoise.c  main.c
src/platform/: common.c  darwin.c  linux.c
src/vm/: vm.c  vm.h
test/: daemon.js  helper1.js  helper2.js  helper3.js  helper4.js  helper5.js  helper6.js  helper7.js  helper8.js  shebangtest.js  test-duktape-modsearch-writable.js  test-eval-require-main.js  test-fs-file.js  test-hash-createhash.js  test-hash-incremental.js  test-hash-vectors.js  test-io-file.js  test-io-poll-badargs.js  test-io-poll-stdout.js  test-io-poll.js  test-io-select-badargs.js  test-io-select-stdout.js  test-io-select.js  test-io-stdio.js  test-module-file.js  test-net-create-socket.js  test-net-socket-abstract.js  test-net-socket-bad-domain.js  test-net-socket-buffers.js  test-net-socket-connection.js  test-net-socket-dgram-buffers.js  test-net-socket-dgram-connected.js  test-net-socket-dgram.js  test-net-socket-options.js  test-net-socketpair.js  test-os-chdir.js  test-os-cwd.js  test-os-fork-execv.js  test-os-fork-execve-args.js  test-os-fork-execve-env.js  (+31 more)
test/fixtures/require_broken_dir/: foo.js
test/fixtures/require_main/: bar.js  foo.js
tools/: gencode.py  generrno.py  test.py
tools/build_duktape/: build.sh  config.yaml
